--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "untitled",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AlexZ2019@github.com/AlexZ2019/social-network-learn-version-",
+  "homepage": "https://alexz2019.github.io/social-network-learn/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
