--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redux-form": "^8.3.0",
     "gh-pages": "^3.1.0",
     "react-test-renderer": "^16.12.0"
