--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "use-react-router": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
