--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript": "~3.7.2",
-    "use-react-router": "^1.0.7"
+    "use-react-router": "^1.0.7",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,6 +55,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.3",
     "@types/redux-form": "^8.3.0",
+    "@types/uuid": "^8.3.0",
     "gh-pages": "^3.1.0",
     "react-test-renderer": "^16.12.0"
   }
